ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenai-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: jenai.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenai-service
                port:
                  number: 80
